test/spec/call_indirect.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/call_indirect.wast
(;; STDOUT ;;;
out/test/spec/call_indirect.wast:498: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:499: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:500: assert_trap passed: undefined table index
out/test/spec/call_indirect.wast:501: assert_trap passed: undefined table index
out/test/spec/call_indirect.wast:502: assert_trap passed: undefined table index
out/test/spec/call_indirect.wast:508: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:509: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:515: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:516: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:522: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:523: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:529: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:530: assert_trap passed: indirect call signature mismatch
out/test/spec/call_indirect.wast:623: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.1.wat:1:122: error: unexpected token "param", expected an expr.
  ...indirect (type $sig) (result i32) (param i32)    (i32.const 0) (i32.const ...
                                        ^^^^^
  out/test/spec/call_indirect/call_indirect.1.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (type $sig) (result i32) (param i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:635: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.2.wat:1:109: error: unexpected token "type", expected an expr.
  ... i32)  (call_indirect (param i32) (type $sig) (result i32)    (i32.const 0...
                                        ^^^^
  out/test/spec/call_indirect/call_indirect.2.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (param i32) (type $sig) (result i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:647: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.3.wat:1:122: error: unexpected token "type", expected an expr.
  ...indirect (param i32) (result i32) (type $sig)    (i32.const 0) (i32.const ...
                                        ^^^^
  out/test/spec/call_indirect/call_indirect.3.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (param i32) (result i32) (type $sig)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:659: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.4.wat:1:110: error: unexpected token "type", expected an expr.
  ...i32)  (call_indirect (result i32) (type $sig) (param i32)    (i32.const 0)...
                                        ^^^^
  out/test/spec/call_indirect/call_indirect.4.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (result i32) (type $sig) (param i32)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:671: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.5.wat:1:110: error: unexpected token "param", expected an expr.
  ...i32)  (call_indirect (result i32) (param i32) (type $sig)    (i32.const 0)...
                                        ^^^^^
  out/test/spec/call_indirect/call_indirect.5.wat:1:166: error: unexpected token ), expected EOF.
  ...irect (result i32) (param i32) (type $sig)    (i32.const 0) (i32.const 0)  ))
                                                                                 ^
out/test/spec/call_indirect.wast:683: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.6.wat:1:67: error: unexpected token "param", expected an expr.
  ...t i32)  (call_indirect (result i32) (param i32) (i32.const 0) (i32.const 0)))
                                          ^^^^^
  out/test/spec/call_indirect/call_indirect.6.wat:1:106: error: unexpected token ), expected EOF.
  ...t i32)  (call_indirect (result i32) (param i32) (i32.const 0) (i32.const 0)))
                                                                                 ^
out/test/spec/call_indirect.wast:693: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.7.wat:1:46: error: unexpected token $x, expected ).
  ...e 0 funcref)(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))
                                             ^^
  out/test/spec/call_indirect/call_indirect.7.wat:1:82: error: unexpected token ), expected EOF.
  ...e 0 funcref)(func (call_indirect (param $x i32) (i32.const 0) (i32.const 0)))
                                                                                 ^
out/test/spec/call_indirect.wast:700: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.8.wat:1:57: error: expected 0 results, got 1
  ...0 funcref)(func (result i32)  (call_indirect (type $sig) (result i32) (i32...
                                    ^^^^^^^^^^^^^
out/test/spec/call_indirect.wast:710: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.9.wat:1:82: error: expected 1 arguments, got 0
  ...0 funcref)(func (result i32)  (call_indirect (type $sig) (result i32) (i32...
                                    ^^^^^^^^^^^^^
out/test/spec/call_indirect.wast:720: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.10.wat:1:69: error: expected 1 results, got 0
  ...i32)))(table 0 funcref)(func  (call_indirect (type $sig) (param i32) (i32....
                                    ^^^^^^^^^^^^^
out/test/spec/call_indirect.wast:730: assert_malformed passed:
  out/test/spec/call_indirect/call_indirect.11.wat:1:86: error: expected 2 arguments, got 1
  ...0 funcref)(func (result i32)  (call_indirect (type $sig) (param i32) (resu...
                                    ^^^^^^^^^^^^^
out/test/spec/call_indirect.wast:745: assert_invalid passed:
  0000000: error: table variable out of range: 0 (max 0)
  000001c: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:753: assert_invalid passed:
  error: type mismatch in i32.eqz, expected [i32] but got []
  0000023: error: OnConvertExpr callback failed
out/test/spec/call_indirect.wast:761: assert_invalid passed:
  error: type mismatch in i32.eqz, expected [i32] but got [i64]
  0000027: error: OnConvertExpr callback failed
out/test/spec/call_indirect.wast:770: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32] but got []
  0000026: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:778: assert_invalid passed:
  error: type mismatch in call_indirect, expected [f64, i32] but got []
  0000027: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:786: assert_invalid passed:
  error: type mismatch in function, expected [] but got [i32]
  0000025: error: EndFunctionBody callback failed
out/test/spec/call_indirect.wast:794: assert_invalid passed:
  error: type mismatch in function, expected [] but got [f64, i32]
  000002e: error: EndFunctionBody callback failed
out/test/spec/call_indirect.wast:805: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32] but got []
  0000027: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:813: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32] but got [... i64]
  0000028: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:822: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000002a: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:832: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000002a: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:842: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32, f64] but got [f64, i32]
  0000032: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:852: assert_invalid passed:
  error: type mismatch in call_indirect, expected [f64, i32] but got [i32, f64]
  0000032: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:863: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32] but got []
  0000036: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:876: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  0000039: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:889: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32] but got []
  0000036: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:902: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  0000039: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:915: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32] but got []
  000003a: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:931: assert_invalid passed:
  error: type mismatch in call_indirect, expected [i32, i32] but got [i32]
  000003d: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:951: assert_invalid passed:
  0000000: error: function type variable out of range: 1 (max 1)
  0000022: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:958: assert_invalid passed:
  0000000: error: function type variable out of range: 1012321300 (max 1)
  0000026: error: OnCallIndirectExpr callback failed
out/test/spec/call_indirect.wast:969: assert_invalid passed:
  0000000: error: function variable out of range: 0 (max 0)
  0000018: error: OnElemSegmentElemExpr_RefFunc callback failed
155/155 tests passed.
;;; STDOUT ;;)
